# langgraph

./: .env  .gitignore  README.md  pyproject.toml
chat_model/: chat_model.py  conversational_chat_model.py  message_type.py
chat_model/persistance/: save_chat.py
rag/data_embedding/: document_persistance.py  search_module.py
rag/data_parser/: markdown_parser.py
rag/test-data/: harry_potter.md  stories.md
